fixed birthday date format.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=Actors Micro Service
+server.port=9091
+logging.level.org.springframework.web.reactive.result.method.annotation.RequestMappingHandlerMapping=trace
+spring.docker.compose.file=./compose.yaml
+
