--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,7 @@ spring.application.name=Actors Micro Service
 server.port=9091
 logging.level.org.springframework.web.reactive.result.method.annotation.RequestMappingHandlerMapping=trace
 spring.docker.compose.file=./compose.yaml
+remote.movies.service.url=http://localhost:9090/movies
+remote.users.service.url=http://localhost:8080/users
+
 
