Authenticate users with people microservice

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ server.port=9091
 logging.level.org.springframework.web.reactive.result.method.annotation.RequestMappingHandlerMapping=trace
 spring.docker.compose.file=./compose.yaml
 remote.movies.service.url=http://localhost:9090/movies
-remote.users.service.url=http://localhost:8080/users
+remote.users.service.url=http://localhost:8080/people
 
 
