--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=Actors Micro Service
 server.port=9091
+spring.rsocket.server.port=7002
 logging.level.org.springframework.web.reactive.result.method.annotation.RequestMappingHandlerMapping=trace
 spring.docker.compose.file=./compose.yaml
 remote.movies.service.url=http://localhost:9090/movies
